# automlcli

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
automlcli/: __main__.py  configs.py  exceptions.py  io.py  plugins.py  settings.py  util.py
automlcli/commands/: __init__.py  evaluate.py  predict.py  retrain.py  train.py
automlcli/models/: __init__.py  flaml.py  model.py  tpot.py
tests/: test_automlcli.py  test_util.py
tests/commands/: test_predict.py  test_retrain.py  test_train.py
tests/fixtures/configs/: config.yml
tests/fixtures/data/: dev.csv  model.pkl  test.csv  train.csv
tests/models/: test_flaml.py  test_tpot.py
