[tool.poetry]
name = "automlcli"
version = "0.1.0"
description = ""
authors = ["altescy <altescy@fastmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colt = "^0.6.1"
fs = "^2.4.12"
fs-s3fs = "^1.1.1"
numpy = "^1.20.1"
omegaconf = "^2.0.6"
pandas = "^1.2.2"
requests = "^2.25.1"
tqdm = "^4.57.0"
flatten-dict = "^0.3.0"
flaml = {version = "^0.2.5", optional = true}
tpot = {version = "^0.11.7", optional = true}
mlflow = {version = "^1.14.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-language-server = "^0.36.2"
mypy = "^0.812"
pylint = "^2.7.0"
ipython = "^7.20.0"

[tool.poetry.extras]
flaml=["flaml"]
tpot=["tpot"]
mlflow=["mlflow"]
all=["flaml", "tpot", "mlflow"]

[tool.poetry.scripts]
automl = "automlcli.__main__:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
